fixed hamburger icon to be more visible on dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -746,6 +746,12 @@ only screen
   color: var(--green);
 }
 
+  [data-theme="dark"]  .navbar-toggler {
+      border: 2px solid var(--purple-light);
+      background-color: var(--green);
+      border-radius: 50px;
+    }
+
 #themeToggle {
   background-color: transparent;
   border: none;
